@@ -4,6 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- Added descriptions to control panel fields.
+  [davidjb]
 - Lengthen the input fields on the CAS control panel page for ease of entry.
   [davidjb]
 - Ensure latest Plone versions display the CAS icon in the control panel.
